--- a/Localizations/vi.lproj/Main.strings
+++ b/Localizations/vi.lproj/Main.strings
@@ -1,30 +1,30 @@
 
 /* Class = "UIViewController"; title = "Select Photo"; ObjectID = "BYZ-38-t0r"; */
-"BYZ-38-t0r.title" = "Select Photo";
+"BYZ-38-t0r.title" = "Lựa chọn ảnh";
 
 /* Class = "UIButton"; normalTitle = "Cancel"; ObjectID = "EQw-nC-qPz"; */
-"EQw-nC-qPz.normalTitle" = "Cancel";
+"EQw-nC-qPz.normalTitle" = "Huỷ";
 
 /* Class = "UISegmentedControl"; IZr-2h-Z0Y.segmentTitles[0] = "Stil"; ObjectID = "IZr-2h-Z0Y"; */
-"IZr-2h-Z0Y.segmentTitles[0]" = "Stil";
+"IZr-2h-Z0Y.segmentTitles[0]" = "Tĩnh";
 
 /* Class = "UISegmentedControl"; IZr-2h-Z0Y.segmentTitles[1] = "Perspective"; ObjectID = "IZr-2h-Z0Y"; */
-"IZr-2h-Z0Y.segmentTitles[1]" = "Perspective";
+"IZr-2h-Z0Y.segmentTitles[1]" = "Góc nhìn";
 
 /* Class = "UILabel"; text = "Adjust Space"; ObjectID = "JJU-FV-Ywn"; */
-"JJU-FV-Ywn.text" = "Adjust Space";
+"JJU-FV-Ywn.text" = "Điều chỉnh toạ độ";
 
 /* Class = "UILabel"; text = "Move and Scale"; ObjectID = "Jbm-fl-Tn8"; */
-"Jbm-fl-Tn8.text" = "Move and Scale";
+"Jbm-fl-Tn8.text" = "Di chuyển và điểu chình kích cỡ";
 
 /* Class = "UILabel"; text = "11:05"; ObjectID = "MVI-YI-uEU"; */
 "MVI-YI-uEU.text" = "11:05";
 
 /* Class = "UIButton"; normalTitle = "Set"; ObjectID = "g8a-V4-Xc6"; */
-"g8a-V4-Xc6.normalTitle" = "Set";
+"g8a-V4-Xc6.normalTitle" = "Chọn";
 
 /* Class = "UINavigationItem"; title = "Select Photo"; ObjectID = "lYH-jb-645"; */
-"lYH-jb-645.title" = "Select Photo";
+"lYH-jb-645.title" = "Lựa chọn ảnh";
 
 /* Class = "UILabel"; text = "Thursday, December 7"; ObjectID = "myk-bP-Oxa"; */
-"myk-bP-Oxa.text" = "Thursday, December 7";
+"myk-bP-Oxa.text" = "Thứ 5, ngày 7, tháng 12";
