--- a/Localizations/ko.lproj/Localizable.strings
+++ b/Localizations/ko.lproj/Localizable.strings
@@ -13,7 +13,7 @@
 "OtherApps" = "개발자의 다른 앱";
 "SeeOtherApps" = "다른 앱 보기";
 "Usage" = "사용법";
-"CheckUsage" = "읽고 싶어요.";
+"CheckUsage" = "사용설명서 읽기";
 
 "SaveImageDoneAlert" = "이미지 저장 완료. 사진 어플을 확인해주세요.";
 "MovePhotoAppAlertTitle" = "사진 앱보기";
