--- a/Localizations/ru.lproj/Localizable.strings
+++ b/Localizations/ru.lproj/Localizable.strings
@@ -13,7 +13,7 @@
 "OtherApps" = "Другие приложения";
 "SeeOtherApps" = "Смотрите другие приложения";
 "Usage" = "Usage";
-"CheckUsage" = "Я хочу прочитать";
+"CheckUsage" = "Я хотел бы видеть использование.";
 
 "SaveImageDoneAlert" = "Сохраненное изображение. Проверьте свой альбом. ";
 "MovePhotoAppAlertTitle" = "Показать фото";
@@ -26,7 +26,7 @@
 "PermissionCameraDenyAlertTitle" = "нужен доступ к камере";
 "PermissionCameraDenyAlertDesc" = "Для полного использования этого приложения требуется доступ камеры.";
 
-"Instruction-desc-01" = "Проверьте строку контекстного меню после запуска приложения. ";
+"Instruction-desc-01" = "Проверьте значок меню в правом нижнем углу после запуска приложения.";
 "Instruction-desc-02" = "Коснитесь значка изображения в верхней части кнопки меню. ";
 "Instruction-desc-03" = "Выберите изображения, которые вы хотите в качестве обоев. До 4 вы можете выбирать изображения .";
 "Instruction-desc-04" = "Если вы хотите отрегулировать поля, нажмите кнопку меню и коснитесь левого значка. ";
