--- a/Localizations/ja.lproj/Localizable.strings
+++ b/Localizations/ja.lproj/Localizable.strings
@@ -13,7 +13,7 @@
 "OtherApps" = "その他のアプリ";
 "SeeOtherApps" = "他のアプリを見る";
 "Usage" = "Usage";
-"CheckUsage" = "読みたい";
+"CheckUsage" = "私は使い方を見たいと思います。";
 
 "SaveImageDoneAlert" = "保存した画像。あなたのアルバムを確認してください。";
 "MovePhotoAppAlertTitle" = "写真を表示";
@@ -26,7 +26,7 @@
 "PermissionCameraDenyAlertTitle" = "カメラアクセスが必要です。";
 "PermissionCameraDenyAlertDesc" = "このアプリを最大限に活用するには、カメラにアクセスする必要があります。";
 
-"Instruction-desc-01" = "アプリケーションの実行後にショートカットメニューバーを確認してください。";
+"Instruction-desc-01" = "アプリを実行した後、右下にあるメニューアイコンを確認します。";
 "Instruction-desc-02" = "メニューボタンの上部にある画像アイコンをタッチします。";
 "Instruction-desc-03" = "壁紙にしたい画像を選択してください。最大4つの画像を選択できます。";
 "Instruction-desc-04" = "余白を調整するには、メニューボタンをタッチして左のアイコンをタッチします。";
