--- a/Localizations/pt-BR.lproj/Localizable.strings
+++ b/Localizations/pt-BR.lproj/Localizable.strings
@@ -13,7 +13,7 @@
 "OtherApps" = "Outros aplicativos";
 "SeeOtherApps" = "Veja outros aplicativos";
 "Usage" = "Uso";
-"CheckUsage" = "Eu quero ler";
+"CheckUsage" = "Eu gostaria de ver o uso.";
 
 "SaveImageDoneAlert" = "Imagem salva. Por favor, verifique seu álbum.";
 "MovePhotoAppAlertTitle" = "Mostrar foto";
@@ -26,7 +26,7 @@
 "PermissionCameraDenyAlertTitle" = "Precisa de acesso à câmera";
 "PermissionCameraDenyAlertDesc" = "É necessário ter acesso à câmera para aproveitar ao máximo este aplicativo.";
 
-"Instruction-desc-01" = "Verifique a barra de menus de atalho depois de executar o aplicativo.";
+"Instruction-desc-01" = "Verifique o ícone do menu na parte inferior direita depois de executar o aplicativo.";
 "Instruction-desc-02" = "Toque no ícone da imagem no topo do botão de menu.";
 "Instruction-desc-03" = "Selecione as imagens que deseja como papel de parede. Até 4 você pode selecionar imagens.";
 "Instruction-desc-04" = "Se você deseja ajustar as margens, toque no botão de menu e toque no ícone à esquerda.";
